adx-azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "clusterName": {
      "type": "string",
      "defaultValue": "[concat('kusto', uniqueString(resourceGroup().id))]"
    },
    "databases_kustodb_name": {
          "type": "string",
          "defaultValue": "movies",
          "metadata": {
            "description": "Name of the database to create"
          }
      },
    "dataManagementPublicIpName": {
      "type": "string",
      "defaultValue": "dm-pip"
    },
    "enginePublicIpName": {
      "type": "string",
      "defaultValue": "engine-pip"
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources."
      }
    },
    "skuName": {
      "type": "string",
      "defaultValue": "Standard_D11_v2"
    },
    "skuTier": {
      "type": "string",
      "defaultValue": "Standard"
    },
    "capacity": {
      "type": "int",
      "defaultValue": "2"
    },
    "subnetName": {
      "type": "string",
      "defaultValue": "adx-subnet"
    },
    "virtualNetworkName": {
      "type": "string",
      "defaultValue": "vnet"
    }
  },
  "variables": {
    "dataManagementPublicIpId": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('dataManagementPublicIpName'))]",
    "enginePublicIpId": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('enginePublicIpName'))]",
    "nsgId": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]",
    "nsgName": "azureDataExplorerNsg",
    "publicIpAllocationMethod": "Static",
    "subnetPrefix": "10.1.3.0/24",
    "subnetId": "[resourceId('Microsoft.Network/virtualNetworks/subnets',parameters('virtualNetworkName'),parameters('subnetName'))]",
    "vnetId": "[resourceId('Microsoft.Network/virtualNetworks',parameters('virtualNetworkName'))]"
  },
  "resources": [
    {
          "name": "[concat(parameters('clusterName'), '/', parameters('databases_kustodb_name'))]",
          "type": "Microsoft.Kusto/clusters/databases",
          "kind": "ReadWrite",
          "apiVersion": "2020-06-14",
          "location": "[parameters('location')]",
          "dependsOn": [
              "[resourceId('Microsoft.Kusto/clusters', parameters('clusterName'))]"
          ],
          "properties": {
              "softDeletePeriodInDays": 365,
              "hotCachePeriodInDays": 31
          }
      },
    {
      "type": "Microsoft.Kusto/Clusters",
      "sku": {
        "name": "[parameters('skuName')]",
        "tier": "[parameters('skuTier')]",
        "capacity":"[parameters('capacity')]"
      },
      "name": "[parameters('clusterName')]",
      "apiVersion": "2020-06-14",
      "dependsOn": [
        "[variables('enginePublicIpId')]",
        "[variables('dataManagementPublicIpId')]",
        "[variables('subnetId')]",
        "[variables('nsgId')]"
      ],
      "location": "[parameters('location')]",
      "properties": {
        "virtualNetworkConfiguration": {
          "subnetId": "[variables('subnetId')]",
          "enginePublicIpId": "[variables('enginePublicIpId')]",
          "dataManagementPublicIpId": "[variables('dataManagementPublicIpId')]"
        }
      }
    },
    {
      "apiVersion": "2020-05-01",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[parameters('dataManagementPublicIpName')]",
      "sku": {
        "name": "Standard"
      },
      "location": "[parameters('location')]",
      "properties": {
        "publicIPAllocationMethod": "[variables('publicIpAllocationMethod')]",
        "publicIPAddressVersion": "IPv4"
      }
    },
    {
      "apiVersion": "2020-05-01",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[parameters('enginePublicIpName')]",
      "sku": {
        "name": "Standard"
      },
      "location": "[parameters('location')]",
      "properties": {
        "publicIPAllocationMethod": "[variables('publicIpAllocationMethod')]",
        "publicIPAddressVersion": "IPv4"
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "name": "[concat(parameters('virtualNetworkName'),'/',parameters('subnetName'))]",
      "location": "[parameters('location')]",
      "apiVersion": "2020-05-01",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups/', variables('nsgName'))]"
      ],
      "properties": {
        "addressPrefix": "[variables('subnetPrefix')]",
        "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]",
                "location": "[parameters('location')]"
              }
            }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('nsgName')]",
      "apiVersion": "2019-07-01",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
                        "name": "adx1",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "AzureDataExplorerManagement",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
          {
                        "name": "adx2-health-monitor-eastus",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [
                                "137.116.81.189",
                                "104.46.110.170",
                                "52.249.253.174"
                            ],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "adx3",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "80",
                                "443"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "adx4",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[variables('subnetPrefix')]",
                            "destinationAddressPrefix": "[variables('subnetPrefix')]",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
        ]
      }
    }
  ]
}
